--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -6,11 +6,11 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
 <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
-<link rel="mask-icon" href="/assets/images/favicon/safari-pinned-tab.svg" color="#515151">
+<link rel="mask-icon" href="/assets/images/favicon/safari-pinned-tab.svg" color="#686868">
 <link rel="shortcut icon" href="/assets/images/favicon/favicon.ico">
 <meta name="msapplication-TileColor" content="#2d89ef">
 <meta name="msapplication-config" content="/assets/images/favicon/browserconfig.xml">
-<meta name="theme-color" content="#ffffff">
+<meta name="theme-color" content="#0e0e0e">
 <!-- End Favicon lần 02 -->
 
 <!-- Favicon lần đầu -->
