--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,7 +2,7 @@
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <!-- Favicon lần 02 -->
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
+<!-- <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
 <link rel="manifest" href="/assets/images/favicon/site.webmanifest">
@@ -10,11 +10,11 @@
 <link rel="shortcut icon" href="/assets/images/favicon/favicon.ico">
 <meta name="msapplication-TileColor" content="#2d89ef">
 <meta name="msapplication-config" content="/assets/images/favicon/browserconfig.xml">
-<meta name="theme-color" content="#0e0e0e">
+<meta name="theme-color" content="#0e0e0e"> -->
 <!-- End Favicon lần 02 -->
 
 <!-- Favicon lần đầu -->
-<!-- <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
 <link rel="manifest" href="/assets/images/site.webmanifest">
@@ -22,6 +22,6 @@
 <link rel="shortcut icon" href="/assets/images/favicon.ico">
 <meta name="msapplication-TileColor" content="#2d89ef">
 <meta name="msapplication-config" content="/assets/images/browserconfig.xml">
-<meta name="theme-color" content="#ffffff"> -->
+<meta name="theme-color" content="#ffffff">
 <!-- End Favicon lần đầu -->
 <!-- end custom head snippets -->
