--- a/_sass/minimal-mistakes/skins/_default.scss
+++ b/_sass/minimal-mistakes/skins/_default.scss
@@ -1,5 +1,7 @@
 /* ==========================================================================
-   Default skin
+   Default skin : File này mặc định là rỗng, thay đổi chỗ này để ghi đè một số thông số 
    ========================================================================== */
 
-// Intentionally left blank
+// Thay đổi màu
+$background-color: #FAFAF9; // Màu xám nhạt
+$text-color: #000000;
