--- a/_sass/minimal-mistakes/thanh-css/che-do-toi.scss
+++ b/_sass/minimal-mistakes/thanh-css/che-do-toi.scss
@@ -358,6 +358,10 @@
 
 .c-scheme-switch {
   position: relative;
+  max-width: fit-content;
+  margin-left: auto;
+  display: block;
+  margin-left: auto;
 
   &_slider {
     position: relative;
