đổi màu nút theo dõi

--- a/_sass/minimal-mistakes/thanh-css/che-do-toi.scss
+++ b/_sass/minimal-mistakes/thanh-css/che-do-toi.scss
@@ -305,6 +305,17 @@
       }
     }
   }
+
+  .btn--inverse {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    border: 1px solid var(--border-color);
+
+    &:hover {
+      color: var(--masthead-link-color-hover);
+      background: var(--navicon-link-color-hover);
+    }
+  }
 }
 
 // Cần xử lý từng cái
