--- a/_sass/minimal-mistakes/thanh-css/che-do-toi.scss
+++ b/_sass/minimal-mistakes/thanh-css/che-do-toi.scss
@@ -309,11 +309,11 @@
   .btn--inverse {
     background-color: var(--background-color);
     color: var(--text-color);
-    border: 1px solid var(--border-color);
+    border: 1px solid #686868;
 
     &:hover {
-      color: var(--masthead-link-color-hover);
-      background: var(--navicon-link-color-hover);
+      // color: var(--masthead-link-color-hover);
+      background: red;
     }
   }
 }
