--- a/_sass/minimal-mistakes/thanh-css/che-do-toi.scss
+++ b/_sass/minimal-mistakes/thanh-css/che-do-toi.scss
@@ -313,7 +313,7 @@
 
     &:hover {
       // color: var(--masthead-link-color-hover);
-      background: red;
+      background: #4e91a5;
     }
   }
 }
